--- a/src/app/product-page/product/product.component.html
+++ b/src/app/product-page/product/product.component.html
@@ -1,1 +1,7 @@
-<p>product works!</p>
+<h1>
+    <p-card [header]="product.name">
+        <p class="m-0">
+            {{product.price}}
+        </p>
+    </p-card>
+</h1>
