--- a/src/app/product-page/product/product.component.html
+++ b/src/app/product-page/product/product.component.html
@@ -3,5 +3,7 @@
         <p class="m-0">
             {{product.price}}
         </p>
+
+        <p-button label="Buy" (onClick)="emitEvent()"></p-button>
     </p-card>
 </h1>
