--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -2,5 +2,5 @@
 <p>product-page works!</p>
 
 @for(product of products; track product.id){
-<app-product [product]="product"></app-product>
+<app-product [product]="product" (addToBasketEvent)="addProductToBasket($event)"></app-product>
 }
