--- a/src/app/product-page/product/product.component.html
+++ b/src/app/product-page/product/product.component.html
@@ -4,6 +4,6 @@
             {{product.price}}
         </p>
 
-        <p-button label="Buy" (onClick)="emitEvent()"></p-button>
+        <p-button label="Buy" (onClick)="productService.addProductToBasket(product)"></p-button>
     </p-card>
 </h1>
