cart product quantities

--- a/src/app/product-page/product/product.component.html
+++ b/src/app/product-page/product/product.component.html
@@ -4,8 +4,6 @@
             {{product.name}}
             {{product.price}} €
         </p>
-
-
-        <p-button label="Buy" (onClick)="productService.addProductToBasket(product)"></p-button>
+        <p-button label="Buy" (onClick)="_checkoutService.addProductToCart(product)"></p-button>
     </p-card>
 </h1>
