--- a/src/app/checkout-page/checkout-product-list/checkout-product-list.component.html
+++ b/src/app/checkout-page/checkout-product-list/checkout-product-list.component.html
@@ -1,14 +1,16 @@
-<p-table [value]="_productService.$basketProducts()" [tableStyle]="{ 'min-width': '50rem' }">
+<p-table [value]="_checkoutService.basketItems()" [tableStyle]="{ 'min-width': '50rem' }">
     <ng-template pTemplate="header">
         <tr>
             <th>ID</th>
             <th>Name</th>
+            <th>Quantity</th>
         </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-product>
+    <ng-template pTemplate="body" let-cartProduct>
         <tr>
-            <td>{{ product.id }}</td>
-            <td>{{ product.name }}</td>
+            <td>{{ cartProduct.product.id }}</td>
+            <td>{{ cartProduct.product.name }}</td>
+            <td>{{ cartProduct.quantity }}</td>
         </tr>
     </ng-template>
 </p-table>
