--- a/src/app/components/basket/basket.component.html
+++ b/src/app/components/basket/basket.component.html
@@ -1,2 +1,2 @@
-<p-button label="Basket" icon="pi pi-shopping-cart" [badge]="_productService.$basketProducts().length.toString()"
+<p-button label="Basket" icon="pi pi-shopping-cart" [badge]="_checkoutService.totalBasketItemsCount().toString()"
     badgeClass="p-badge-danger" [outlined]="true" (onClick)="_router.navigate(['checkout'])"></p-button>
