adding product, error handling

--- a/src/app/management-page/add-product/add-product.component.html
+++ b/src/app/management-page/add-product/add-product.component.html
@@ -20,6 +20,6 @@
             <input id="SKU" label="SKU" type="text" pInputText formControlName="SKU" />
         </div>
 
-        <p-button type="submit" (onClick)="_productService.createDatabaseProduct(this.myForm)">Submit</p-button>
+        <p-button type="submit" (onClick)="createDatabaseProduct()">Submit</p-button>
     </form>
 </div>
