--- a/src/app/management-page/add-product/add-product.component.html
+++ b/src/app/management-page/add-product/add-product.component.html
@@ -1,3 +1,4 @@
+<h2>Add a new product: </h2>
 <div class="p-fluid grid">
     <form [formGroup]="myForm">
 
@@ -23,3 +24,5 @@
         <p-button type="submit" (onClick)="createDatabaseProduct()">Submit</p-button>
     </form>
 </div>
+
+<p-divider></p-divider>
