--- a/src/app/management-page/management-page.component.html
+++ b/src/app/management-page/management-page.component.html
@@ -1,2 +1,3 @@
 <app-add-product></app-add-product>
 <app-add-discount></app-add-discount>
+<app-attach-discount-to-customer></app-attach-discount-to-customer>
