--- a/src/app/management-page/management-page.component.html
+++ b/src/app/management-page/management-page.component.html
@@ -1,3 +1,5 @@
 <app-add-product></app-add-product>
+<p-divider></p-divider>
 <app-add-discount></app-add-discount>
+<p-divider></p-divider>
 <app-attach-discount-to-customer></app-attach-discount-to-customer>
