--- a/src/app/management-page/add-discount/add-discount.component.html
+++ b/src/app/management-page/add-discount/add-discount.component.html
@@ -1,5 +1,6 @@
 <div class="p-fluid grid">
     <form [formGroup]="myForm">
+        <h2>Add a new product: </h2>
 
         <!--AGREEMENT TYPE-->
         <div *ngFor="let agreementType of agreementTypesList" class="field-checkbox">
