--- a/src/app/management-page/management-page.component.html
+++ b/src/app/management-page/management-page.component.html
@@ -3,3 +3,5 @@
 <app-add-discount></app-add-discount>
 <p-divider></p-divider>
 <app-attach-discount-to-customer></app-attach-discount-to-customer>
+<p-divider></p-divider>
+<app-add-customer></app-add-customer>
