--- a/src/app/management-page/attach-discount-to-customer/attach-discount-to-customer.component.html
+++ b/src/app/management-page/attach-discount-to-customer/attach-discount-to-customer.component.html
@@ -3,11 +3,28 @@
     <form [formGroup]="myForm">
         <div class="field col-12">
             <p-dropdown formControlName="selectedCustomer" [options]="_customerService.$databaseCustomers()"
-                optionLabel="id" placeholder="Select customer"></p-dropdown>
+                optionLabel="name" placeholder="Select customer"></p-dropdown>
         </div>
         <div class="field col-12">
-            <p-dropdown formControlName="selectedDiscount" [options]="_discountService.$discounts()" optionLabel="id"
-                placeholder="Select discount"></p-dropdown>
+            <p-dropdown formControlName="selectedDiscount" [options]="_discountService.$discounts()"
+                placeholder="Select discount">
+                <ng-template let-option pTemplate="koira">
+                    @if(option.agreementType === "PERCENTAGE_OFF_PRODUCT"){
+                    {{ 'Product Discount ' + option.product.name + '[' + option.product.id + '] ' + option.percentageOff
+                    +
+                    ' %' }}
+                    }
+                    @if(option.agreementType === "PERCENTAGE_OFF_WHOLE_ORDER"){
+                    {{ 'Order Discount '+ ' ' + option.percentageOff + ' %' }}
+                    }
+                    @if(option.agreementType === "BUY_X_ONLY_PAY_Y"){
+                    {{ 'Buy '+ ' ' + option.product.name + '[' + option.product.id + '] ' + ' Pay for ' +
+                    option.onlyPayForAmount }}
+                    }
+
+                </ng-template>
+
+            </p-dropdown>
         </div>
 
         <p-button type="submit" (onClick)="attachDiscountToCustomer()">Submit</p-button>
