--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,3 +1,4 @@
 <div class="flex justify-content-end flex-wrap mb-2">
     <app-basket></app-basket>
+    <p>{{authenticationService.$isLoggedIn().customer?.name}}</p>
 </div>
