--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-content-end flex-wrap mb-2">
+<div class="flex justify-content-end flex-wrap mb-2 gap-3">
     <app-basket></app-basket>
-    <p>{{authenticationService.$isLoggedIn().customer?.name}}</p>
+    <app-userprofile></app-userprofile>
 </div>
