--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,4 +1,5 @@
 <div class="flex justify-content-end flex-wrap mb-2 gap-3">
     <app-basket></app-basket>
     <app-userprofile></app-userprofile>
+    <app-logout></app-logout>
 </div>
