--- a/src/app/product-page/product/product.component.html
+++ b/src/app/product-page/product/product.component.html
@@ -4,6 +4,7 @@
             {{product.name}}
             {{product.price}} €
         </p>
+        <img src="https://cdn1.jysk.com/getimage/wd2.medium/130905" />
         <p-button label="Buy" (onClick)="_checkoutService.addProductToCart(product)"></p-button>
     </p-card>
 </h1>
