--- a/src/app/management-page/add-discount/add-discount.component.html
+++ b/src/app/management-page/add-discount/add-discount.component.html
@@ -43,6 +43,7 @@
                 severity=" error" text="Insert numbers only"></p-message>
         </div>
 
-        <p-button type="submit" (onClick)="createDatabaseDiscountAgreement()">Submit</p-button>
+        <p-button [loading]="loading" [severity]="loading ? 'success' : ''" type="submit"
+            (onClick)="createDatabaseDiscountAgreement()">Submit</p-button>
     </form>
 </div>
