--- a/src/app/management-page/attach-discount-to-customer/attach-discount-to-customer.component.html
+++ b/src/app/management-page/attach-discount-to-customer/attach-discount-to-customer.component.html
@@ -10,6 +10,7 @@
                 placeholder="Select discount">
             </p-dropdown>
         </div>
-        <p-button type="submit" (onClick)="attachDiscountToCustomer()">Submit</p-button>
+        <p-button [loading]="loading" [severity]="loading ? 'success' : '' " type="submit"
+            (onClick)="attachDiscountToCustomer()">Submit</p-button>
     </form>
 </div>
