--- a/src/app/checkout-page/checkout-page.component.html
+++ b/src/app/checkout-page/checkout-page.component.html
@@ -1,5 +1,7 @@
 <app-checkout-product-list></app-checkout-product-list>
 
 <div class="flex justify-content-end flex-wrap m-2">
-    <p-button (click)="createOrder()" label="Place order"></p-button>
+    <p-button [loading]="loading" [severity]="loading ? 'success' : ''" (click)="createOrder()"
+        label="Place order"></p-button>
 </div>
+
